@@ -318,8 +318,8 @@ class EventServiceImplTest {
         expectedEvent.setAdditionalImages(List.of(EventImages.builder().link("New addition image").build()));
 
         method.invoke(eventService, event, eventToUpdateDto, null);
-        assertEquals(expectedEvent.getAdditionalImages().get(0).getLink(),
-            event.getAdditionalImages().get(0).getLink());
+        assertEquals(expectedEvent.getAdditionalImages().getFirst().getLink(),
+            event.getAdditionalImages().getFirst().getLink());
         assertEquals(event.getTitleImage(), expectedEvent.getTitleImage());
 
         eventToUpdateDto.setImagesToDelete(List.of("New addition image"));
@@ -327,8 +327,8 @@ class EventServiceImplTest {
 
         method.invoke(eventService, event, eventToUpdateDto, null);
         assertEquals(expectedEvent.getTitleImage(), event.getTitleImage());
-        assertEquals(expectedEvent.getAdditionalImages().get(0).getLink(),
-            event.getAdditionalImages().get(0).getLink());
+        assertEquals(expectedEvent.getAdditionalImages().getFirst().getLink(),
+            event.getAdditionalImages().getFirst().getLink());
 
         eventToUpdateDto.setAdditionalImages(null);
         method.invoke(eventService, event, eventToUpdateDto, null);
@@ -350,8 +350,8 @@ class EventServiceImplTest {
 
         method.invoke(eventService, event, eventToUpdateDto, multipartFiles);
         assertEquals(expectedEvent.getTitleImage(), event.getTitleImage());
-        assertEquals(expectedEvent.getAdditionalImages().get(0).getLink(),
-            event.getAdditionalImages().get(0).getLink());
+        assertEquals(expectedEvent.getAdditionalImages().getFirst().getLink(),
+            event.getAdditionalImages().getFirst().getLink());
 
         eventToUpdateDto.setImagesToDelete(null);
         eventToUpdateDto.setTitleImage("url");
@@ -361,7 +361,7 @@ class EventServiceImplTest {
             EventImages.builder().event(expectedEvent).link("Add img 2").build()));
         method.invoke(eventService, event, eventToUpdateDto, multipartFiles);
         assertEquals(expectedEvent.getTitleImage(), event.getTitleImage());
-        assertEquals(expectedEvent.getAdditionalImages().get(0).getLink(),
+        assertEquals(expectedEvent.getAdditionalImages().getFirst().getLink(),
             event.getAdditionalImages().get(0).getLink());
         assertEquals("url2", event.getAdditionalImages().get(3).getLink());
 
@@ -417,7 +417,7 @@ class EventServiceImplTest {
         when(modelMapper.map(updatedTagVO, new TypeToken<List<Tag>>() {
         }.getType())).thenReturn(ModelUtils.getEventTags());
         doNothing().when(eventRepo).deleteEventDateLocationsByEventId(1L);
-        when(modelMapper.map(eventToUpdateDto.getDatesLocations().get(0), EventDateLocation.class))
+        when(modelMapper.map(eventToUpdateDto.getDatesLocations().getFirst(), EventDateLocation.class))
             .thenReturn(ModelUtils.getUpdatedEventDateLocation());
         when(googleApiService.getResultFromGeoCodeByCoordinates(any()))
             .thenReturn(ModelUtils.getAddressLatLngResponse());
@@ -541,7 +541,7 @@ class EventServiceImplTest {
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto =
             eventService.getAllUserEvents(
                 pageRequest, principal.getName(), "", "", eventType);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertEquals(expected, actual);
         assertTrue(actual.isFavorite());
@@ -582,7 +582,7 @@ class EventServiceImplTest {
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto =
             eventService.getAllUserEvents(
                 pageRequest, principal.getName(), userLatitude, userLongitude, eventType);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertSame(expected, actual);
         assertFalse(actual.isFavorite());
@@ -807,7 +807,7 @@ class EventServiceImplTest {
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto =
             eventService.getEventsCreatedByUser(pageRequest, principal.getName());
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
         assertEquals(expected, actual);
         assertTrue(actual.isFavorite());
         assertTrue(actual.isSubscribed());
@@ -1138,7 +1138,7 @@ class EventServiceImplTest {
             }.getType())).thenReturn(List.of(expected));
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto = eventService.getAll(pageRequest, null);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertEquals(expected.getId(), actual.getId());
         assertEquals(expected.getDescription(), actual.getDescription());
@@ -1172,7 +1172,7 @@ class EventServiceImplTest {
         when(eventRepo.findSubscribedAmongEventIds(eventIds, user.getId())).thenReturn(events);
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto = eventService.getAll(pageRequest, principal);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertEquals(expected.getId(), actual.getId());
         assertEquals(expected.getDescription(), actual.getDescription());
@@ -1202,7 +1202,7 @@ class EventServiceImplTest {
             }.getType())).thenReturn(List.of(expected));
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto = eventService.getAll(pageRequest, principal);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertEquals(expected.getId(), actual.getId());
         assertEquals(expected.getDescription(), actual.getDescription());
@@ -1240,7 +1240,7 @@ class EventServiceImplTest {
             }.getType())).thenReturn(List.of(expected));
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto = eventService.getAll(pageRequest, principal);
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
 
         assertEquals(expected.getId(), actual.getId());
         assertEquals(expected.getDescription(), actual.getDescription());
@@ -1261,9 +1261,11 @@ class EventServiceImplTest {
         PageRequest pageRequest = PageRequest.of(0, 2);
         Page<Event> page = new PageImpl<>(events, pageRequest, events.size());
         when(eventRepo.searchEventsBy(pageRequest, "query")).thenReturn(page);
-        PageableAdvancedDto<EventDto> expected = new PageableAdvancedDto<>(eventDtos, eventDtos.size(), 0, 1,
-            0, false, false, true, true);
-        assertEquals(expected.getTotalPages(), eventService.searchEventsBy(pageRequest, "query").getTotalPages());
+        PageableAdvancedDto<EventDto> expected =
+            new PageableAdvancedDto<>(eventDtos, eventDtos.size(), 0, 1,
+                0, false, false, true, true);
+        assertEquals(expected.getTotalPages(), eventService.searchEventsBy(pageRequest, "query")
+            .getTotalPages());
     }
 
     @Test
@@ -1410,7 +1412,6 @@ class EventServiceImplTest {
 
     @Test
     void getEventsWithFilterEventDtoWithTagsAndWrongTag() {
-        List<Event> events = List.of(ModelUtils.getEventWithTags());
         PageRequest pageRequest = PageRequest.of(0, 2);
         User user = ModelUtils.getUser();
         Principal principal = ModelUtils.getPrincipal();
@@ -1575,7 +1576,7 @@ class EventServiceImplTest {
 
         PageableAdvancedDto<EventDto> eventDtoPageableAdvancedDto =
             eventService.getAllFavoriteEventsByUser(pageable, user.getEmail());
-        EventDto actual = eventDtoPageableAdvancedDto.getPage().get(0);
+        EventDto actual = eventDtoPageableAdvancedDto.getPage().getFirst();
         assertEquals(expected, actual);
         assertTrue(actual.isFavorite());
         assertTrue(actual.isSubscribed());
